# pydy-tuesday

./: README.md  hello.py  pyproject.toml
scripts/: palmtrees.py  pokemon.py
